--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,22 @@
 	    	 <artifactId>elastic-job-lite-spring-boot-starter</artifactId>
 	   		 <version>2.1.5</version>
 		</dependency>	
+		 <!--添加数据相关的驱动主要是为了记录任务相关的一些数据，日志-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
